@@ -1,6 +1,7 @@
 munin (repository)
 
   * Main: Tuned logging.
+  * Plugins: generic/loggrep now supports summing values from log lines.
 
 munin (1.3.2)
 
